# LLMTextSummarizationBenchmark

./: .gitignore  README.md  bibliography.bib  publication.aux  publication.bbl  publication.blg  publication.fdb_latexmk  publication.fls  publication.out  publication.tex  pyproject.toml
LLM/Python/src/text_summarization/: README.md  alignscore_full_results.json  alignscore_full_results_bs16.json  alignscore_refs_full_results.json  benchmark.py  config.py  gold_standard.py  metrics.py  summarization_utilities.py  testdata.json  utilities.py  visualization.py
LLM/Python/src/text_summarization/llm_apis/: anthropic.py  anthropic_client.py  base_client.py  huggingface.py  huggingface_client.py  local.py  local_client.py  mistral_client.py  ollama.py  ollama_client.py  openai.py  openai_client.py  perplexity.py
Output/: benchmark_report.csv
Resources/: Methods_ID.xlsx  baumgaertel2026_human_evaluation.html  example.env  model_families.xlsx  model_groups.xlsx  model_training_cutoffs.html  model_training_cutoffs.json  text_summarization_goldstandard_data.json
Sections/: conclusions.tex  discussion.tex  introduction.tex  materials_methods.tex  methods.tex  results.tex
Word/: manuscript_draft.docx  ~$nuscript_draft.docx
manuscript/: 01_Article_MainText.tex  02_Article_Supplementary.tex  03_Article_SupplementaryVideos.tex  README.md  build-docx.sh  publication-biorxiv.tex  publication-mdpi.tex  publication-patterns.tex  publication.tex  refs.bib
manuscript-patterns/: .gitignore  acronyms.tex
manuscript/Sections/: discussion.tex  introduction.tex  materials_methods.tex  results.tex
scripts/: README.md  add_publication_dates.py  check_data_leakage_completion.py  check_data_leakage_cutoffs.py  compute_z_norm_unweigthed_score.R  download_models.py  fetch_training_cutoffs.py  generate_games_howell_pvalues.py  generate_heatmap_data.py  generate_metric_correlations.py  generate_offline_evaluation.py  generate_plots_manuscript.R  human_evaluation_server.py
src/data_models/: __init__.py  evaluation.py  paper.py  status.py
src/llm_apis/: __init__.py  anthropic_client.py  base_client.py  config.py  exceptions.py  huggingface_client.py  local_client.py  mistral_client.py  ollama_client.py  openai_client.py
src/llm_summarization_benchmark/: benchmark.py  check.py  metrics.py  summarization_utilities.py  visualization.py
src/utilities/: __init__.py  environment.py  logger.py
