[project]
name = "llm-summarization-benchmark"
version = "0.3.7"
description = "Scientific Paper Summarization Benchmark"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
	"alignscore",
	"summac",
	"anthropic>=0.76.0",
	"bert-score>=0.3.13",
	"mistralai>=1.10.0",
	"ollama>=0.6.1",
	"openai>=2.15.0",
	"pandas>=2.3.3",
	"pandas-stubs~=2.3.3",
	"pip>=25.2",
	"plotly>=6.3.1",
	"python-dotenv>=1.2.1",
	"rouge-score>=0.1.2",
	"sentence-transformers>=5.1.1",
	"tiktoken>=0.12.0",
	"en-core-web-sm",
	"minicheck",
	"accelerate>=1.12.0",
]

[tool.uv.sources]
alignscore = { git = "https://github.com/MNikley/AlignScore" }
summac = { git = "https://github.com/tingofurro/summac" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
minicheck = { git = "https://github.com/Liyan06/MiniCheck", tag = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build]
include = ["src/**"]
exclude = ["tests", "*.tests", "*.tests.*", "tests.*"]

[project.scripts]
benchmark = "llm_summarization_benchmark.benchmark:main"
